added font awesome icon color

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         font-weight: 500;
         font-size: 20px;
       }
-
+      .fa, .fab {
+        color: #FEDE69;
+      }
     </style>
   </head>
   <body>
