--- a/petition.html
+++ b/petition.html
@@ -59,21 +59,21 @@
         <i class="fa fa-facebook-square" style="float: right;">&nbsp;</i>
       </div>
               
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
   <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="img-fluid" width="" height="" /></a> <!--leave the img fluid class, just change inital size. Use %'s-->
   <button class="navbar-toggler offset-9" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav offset-lg-7 offset-md-5 offset-sm-3">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Our Cause <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav offset-lg-7 offset-md-4">
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Our Cause <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="action.html">Take Action</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="petition.html">Sign the Petition</a>
+        <a class="nav-link active" href="#">Sign the Petition</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Find Us</a>
