--- a/action.html
+++ b/action.html
@@ -67,10 +67,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-7 offset-md-4">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Our Cause</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Take Action</a>
+        <a class="nav-link" href="#"> <span class="sr-only">(current)</span>Take Action</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="petition.html">Sign the Petition</a>
