--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/reset.css" />
-    
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Pups In Public</title>
     <style>
       body {
@@ -54,18 +54,18 @@
     <header>
       <div style="background-color: grey;">
         <p style="font-size: 16px; color: white; float: left;">TAKE ACTION NOW! -></p>
-        <i class="fa fa-twitter-square" style="float: right;">&nbsp;</i>
-        <i class="fa fa-instagram" style="float: right;">&nbsp;</i>&nbsp;
-        <i class="fa fa-facebook-square" style="float: right;">&nbsp;</i>
+        <i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i>
+        <i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i>&nbsp;&nbsp;
+        <i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i>
       </div>
               
-  <nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="img-fluid" width="" height="" /></a> <!--leave the img fluid class, just change inital size. Use %'s-->
-  <button class="navbar-toggler offset-9" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
+  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a>
+  <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav offset-lg-7 offset-md-5 offset-sm-3">
+    <ul class="navbar-nav offset-lg-5 offset-md-3 offset-sm-1">
       <li class="nav-item active">
         <a class="nav-link" href="#">Our Cause <span class="sr-only">(current)</span></a>
       </li>
@@ -82,7 +82,7 @@
   </div>
 </nav>
   </header>
-  <div style="height: 500px; background-image: url();" class="text-center col-4 align-text-bottom">
+  <div style="height: 500px; background-image: url();" class="text-center col-4 ">
     <h1>Hello</h1>
   </div>
   </body>
