--- a/petition.html
+++ b/petition.html
@@ -67,13 +67,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-7 offset-md-4">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Our Cause</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="action.html">Take Action</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Sign the Petition</a>
+        <a class="nav-link active" href="#"> <span class="sr-only">(current)</span>Sign the Petition</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Find Us</a>
