--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-7 offset-md-4">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Our Cause</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="action.html">Take Action</a>
@@ -76,7 +76,7 @@
         <a class="nav-link" href="petition.html">Sign the Petition</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Find Us</a>
+        <a class="nav-link" href="#"> <span class="sr-only">(current)</span>Find Us</a>
       </li>
     </ul>
   </div>
