--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="index.html"><img src="img/logo.png" class="img-fluid" width="" height="" /></a> <!--leave the img fluid class, just change inital size. Use %'s-->
+  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a> <!--leave the img fluid class, just change inital size. Use %'s-->
   <button class="navbar-toggler offset-9" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
