--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <header>
       <div style="background-color: grey;">
         <p style="font-size: 16px; color: white; float: left;">TAKE ACTION NOW! -></p>
-        <i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i>
-        <i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i>&nbsp;&nbsp;
-        <i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i>
+        <a href="https://twitter.com"><i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i></a>
+        <a href="https://instagram.com"><i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i></a>&nbsp;&nbsp;
+        <a href="https://facebook.com"><i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i></a>
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
