--- a/petition.html
+++ b/petition.html
@@ -54,18 +54,18 @@
     <header>
       <div style="background-color: grey;">
         <p style="font-size: 16px; color: white; float: left;">TAKE ACTION NOW! -></p>
-        <i class="fa fa-twitter-square" style="float: right;">&nbsp;</i>
-        <i class="fa fa-instagram" style="float: right;">&nbsp;</i>&nbsp;
-        <i class="fa fa-facebook-square" style="float: right;">&nbsp;</i>
+        <a href="https://twitter.com"><i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i></a>
+        <a href="https://instagram.com"><i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i></a>&nbsp;&nbsp;
+        <a href="https://facebook.com"><i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i></a>
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a> <!--leave the img fluid class, just change inital size. Use %'s-->
+  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a>
   <button class="navbar-toggler offset-9" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav offset-lg-7 offset-md-4">
+    <ul class="navbar-nav offset-lg-6 offset-md-3">
       <li class="nav-item">
         <a class="nav-link" href="index.html">Our Cause</a>
       </li>
