--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Pups In Public</title>
     <style>
       body {
-        max-width: 1100px;
+        max-width: 100%;
         margin: auto;
         font-family: Quicksand;
       }
@@ -82,6 +82,12 @@
   </div>
 </nav>
   </header>
+
+  <!--ADDING JUMBOTRON-->
+  <div class="jumbotron cover-image">
+    <img src="https://via.placeholder.com/1600x400" class="img-fluid" alt="Responsive image">
+  </div>
+   <!--ADDING JUMBOTRON-->
   <div style="height: 500px; background-image: url();" class="text-center col-4 ">
     <h1>Hello</h1>
   </div>
