--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Pups In Public</title>
     <style>
       body {
-        max-width: 100%;
+        width: 100%;
         margin: auto;
         font-family: Quicksand;
       }
