worked on getting hero image in, starting about us section

--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
 
   <!--ADDING JUMBOTRON-->
   <div class="jumbotron cover-image">
-    <img src="https://via.placeholder.com/1600x400" class="img-fluid" alt="Responsive image">
+    <img src="https://via.placeholder.com/1600x500?text=PlaceholderTextComingSoon" class="img-fluid" alt="Responsive image">
   </div>
    <!--ADDING JUMBOTRON-->
-  <div style="height: 500px; background-image: url();" class="text-center col-4 ">
+  <div style="padding: 0 5%; height: 500px; background-image: url();" class="text-center col-12 about-us-section">
     <h1>Hello</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nam esse quod consectetur incidunt, voluptatem autem reprehenderit tenetur illo nemo odit accusantium reiciendis corrupti vero blanditiis cum id recusandae labore unde laboriosam in corporis assumenda modi. Atque nemo nihil eaque!</p>
   </div>
   </body>
 </html>
