minior positioning tweak. Jumping back on tomorrow

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </head>
   <body>
     <header>
-      <div style="background-color: grey;">
+      <div style="background-color: grey; padding:.3%">
         <p style="font-size: 16px; color: white; float: left;">TAKE ACTION NOW! -></p>
         <a href="https://twitter.com"><i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i></a>
         <a href="https://instagram.com"><i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i></a>&nbsp;&nbsp;
@@ -60,7 +60,9 @@
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a>
+  <a class="navbar-brand" href="index.html">
+    <img class="logo-img" src="img/logo-y.png" width="17%" height="17%" />
+  </a>
   <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -88,9 +90,10 @@
     <img src="https://via.placeholder.com/1600x500?text=PlaceholderTextComingSoon" class="img-fluid" alt="Responsive image">
   </div>
    <!--ADDING JUMBOTRON-->
-  <div style="padding: 0 5%; height: 500px; background-image: url();" class="text-center col-12 about-us-section">
+  <div style="padding: 0 5%; height: 300px; background-image: url();" class="text-center col-12 about-us-section">
     <h1>Hello</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nam esse quod consectetur incidunt, voluptatem autem reprehenderit tenetur illo nemo odit accusantium reiciendis corrupti vero blanditiis cum id recusandae labore unde laboriosam in corporis assumenda modi. Atque nemo nihil eaque!</p>
   </div>
+ 
   </body>
 </html>
