--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <!--ADDING JUMBOTRON-->
   <div class="jumbotron cover-image">
-    <img src="https://via.placeholder.com/1600x500?text=PlaceholderTextComingSoon" class="img-fluid" alt="Responsive image">
+    <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
   </div>
    <!--ADDING ABOUT US SECTION-->
   <div class="container-fluid first-section">
