Made global nav styles

--- a/action.html
+++ b/action.html
@@ -16,7 +16,7 @@
     <title>Pups In Public</title>
     <style>
       body {
-        max-width: 1100px;
+        width: 100%;
         margin: auto;
         font-family: Quicksand;
       }
@@ -52,25 +52,27 @@
   </head>
   <body>
     <header>
-      <div style="background-color: grey;">
-        <p style="font-size: 16px; color: white; float: left;">TAKE ACTION NOW! -></p>
+      <div style="background-color: grey; padding:.3%">
+        <p style="font-size: 16px; color: white; float: left;"><a class="sign-link" target="_blank" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries">Sign The Petition -></a></p>
         <a href="https://twitter.com"><i class="fa fa-twitter-square" style="float: right;">&nbsp;&nbsp;</i></a>
         <a href="https://instagram.com"><i class="fa fa-instagram" style="float: right;">&nbsp;&nbsp;</i></a>&nbsp;&nbsp;
         <a href="https://facebook.com"><i class="fa fa-facebook-square" style="float: right;">&nbsp;&nbsp;</i></a>
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="index.html"><img src="img/logo-y.png" width="17%" height="17%" /></a>
-  <button class="navbar-toggler offset-9" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="index.html">
+    <img class="logo-img" src="img/logo-y.png" width="17%" height="17%" />
+  </a>
+  <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav offset-lg-7 offset-md-4">
+    <ul class="navbar-nav offset-lg-5 offset-md-1 offset-sm-1">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Our Cause</a>
+        <a class="nav-link" href="index.html">Our Cause <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#"> <span class="sr-only">(current)</span>Take Action</a>
+        <a class="nav-link" href="action.html">Take Action</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="petition.html">Sign the Petition</a>
