before changing image to background image

--- a/index.html
+++ b/index.html
@@ -92,8 +92,15 @@
 
   <!--ADDING JUMBOTRON-->
   <div class="jumbotron cover-image">
-   
     <img src="img/hero-crop2.jpg" class="img-fluid" alt="Responsive image">
+    <div class="center">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, doloribus.
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
+        <p>Lorem ipsum dolor sit amet, c elit..</p>
+      </p>
+      
+      <button type="button" class="btn cover-btn btn-primary">Primary</button>
+    </div>
   </div>
    <!--ADDING ABOUT US SECTION-->
   <div class="container-fluid first-section">
