Added take action button

--- a/index.html
+++ b/index.html
@@ -65,12 +65,15 @@
       </div>
               
   <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
-  <a class="navbar-brand" href="index.html">
-    <img class="logo-img" src="img/logo-y.png" width="17%" height="17%" />
-  </a>
-  <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <div class="nav-components">
+      <a class="navbar-brand" href="index.html">
+        <img class="logo-img" src="img/logo-y.png" width="17%" height="17%" />
+      </a>
+      <button class="navbar-toggler offset-10 align-self-center" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+ 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav offset-lg-5 offset-md-1 offset-sm-1">
       <li class="nav-item active">
@@ -111,6 +114,7 @@
   <div class="col-lg-8">
     <h1 class="first-section-head content">Our Mission</h1>
     <p class="first-section-text content">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat eius, temporibus eaque beatae quaerat possimus at accusamus voluptatem omnis facere aut corporis quo ad earum blanditiis, voluptates dolorem aspernatur ea! Pariatur, quam suscipit voluptatem ipsum quasi commodi ex molestiae provident!</p>
+    <button type="button" class="btn take-action-btn btn-primary">Take Action</button>
   </div>
 
   <div class="col-lg-2">
