finished action page (need footer)

--- a/action.html
+++ b/action.html
@@ -34,14 +34,14 @@
         }
       h1, h2 {
         font-family: WickedGrit;
-        font-size: 24px;
+        font-size: 40px;
         }
       h3, h4, h5, h6 {
         font-family: Quicksand;
         font-weight: 600;
         font-size: 22px;
       }
-      p, span {
+      p, span, li {
         font-family: Quicksand;
         font-weight: 500;
         font-size: 20px;
@@ -104,8 +104,83 @@
       <p>Your signature can go a long way!</p>
       </p>
       
-      <button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button>
+      <a  href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
     </div>
   </div>
+  <div class="container" >
+    
+    <h2 class="text-center mt-4">How You Can Help</h2>
+    <p class="text-center mt-3 mb-5 text-justify">If you have made it this far, it seems you are also passionate about this issue that we are facing. And luckily, there are some very easy ways you can help.</p>
+
+    <div class="row row-content align-items-center my-2">
+        <div class="col-sm-6 order-sm-last col-md-8"> 
+          <h3 class="mb-2">Sign Petition</h3>
+          <p>If nothing else, there is a petition currently on Change.org to allow pets in Florida breweries. You can show your support simply by signing the petition, which will be sent to Florida legislators to help convince them to sway to our side when it comes time to present our appeal to the board.
+            Your information will not be shared by signing, and no further mail will be sent regarding any additional action to be taken by you, but if you are interested in keeping up with the progress of the petition it only takes 5 seconds to join our Facebook group - Pups in Public!
+            </p>
+        </div>
+        <div class="col">
+            <div class="media">
+                <img class="d-flex mr-3 img-thumbnail mt-1" src="img/masonry-grid/dog-sits.jpg" alt="A cute pupper" />
+                <div class="media-body align-self-center">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="mb-4 text-center">
+    <a  href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton2 cover-btn btn">SIGN PETITION</button></a>
+  </div>
+
+  <div class="row row-content align-items-center">
+    <div class="col-sm-4 col-md-3">
+        <h3>Join Facebook Group</h3>
+        <p>Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+    </div>
+    <div class="col">
+        <div class="media">
+            <div class="media-body align-self-center">
+            </div>
+            <img class="d-flex ml-2 img-thumbnail mt-1" src="img/masonry-grid/dog-sits.jpg" alt="A cute pupper" />
+        </div>
+    </div>
+</div>
+
+    <div class="mb-4 mt-1 text-center">
+      <a  href="https://www.facebook.com/groups/494996907843289/" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">JOIN FACEBOOK GROUP</button></a>
+    </div>
+
+
+    <div class="row row-content align-items-center">
+      <div class="col-sm-6 order-sm-last col-md-8"> 
+        <h3>Donations</h3>
+        <p>We are also taking donations through Paypal to help us fight our cause!
+          We will be entirely upfront with how your donations are being utilized at all times.
+          </p>
+      </div>
+      <div class="col">
+          <div class="media">
+              <img class="d-flex mr-3 img-thumbnail mt-1" src="img/masonry-grid/dog-sits.jpg" alt="A cute pupper" />
+              <div class="media-body align-self-center">
+              </div>
+          </div>
+      </div>
+    </div>
+
+    <h2 class="text-center mt-5">How your donations will help:</h2>
+    <ul class="text-center mt-3 mb-3 text-justify">
+    <li class="py-1">- Cover web hosting costs</li>
+    <li class="py-1">- The rest will be given to Chris Rock of RockPit Brewing to help offset costs while lobbying</li>
+    <li class="py-1">- All excess donations that are not needed after these two purposes will be forwarded to <a href="https://animaladvocatesfl.org/" target="_blank">Animal Advocates Florida</a></li>
+  </ul>
+  <h3 class="text-center mt-1">What your donations won’t be used for:</h3>
+  <ul class="text-center mt-2 mb-3 text-justify">
+    <li class="py-1">- To help profit any business. RockPit has amazing beers and is doing a fantastic job in the Orlando marketplace. They don’t need this money to help keep them afloat, just travel and time expenses.</li>
+  </ul>
+</div>
+<div class="mb-5 text-center">
+  <a  href="#" target="_blank"><button type="button" class="myButton2 cover-btn btn">DONATE NOW!</button></a>
+</div>
   </body>
   </html>
