--- a/petition.html
+++ b/petition.html
@@ -104,7 +104,7 @@
       <p>Your signature can go a long way!</p>
       </p>
       
-      <button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button>
+      <a href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
     </div>
   </div>
   </body>
