--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       </p>
       
-      <a  href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
+      <button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button>
     </div>
   </div>
    <!--ADDING ABOUT US SECTION-->
