--- a/action.html
+++ b/action.html
@@ -104,7 +104,7 @@
       <p>Your signature can go a long way!</p>
       </p>
       
-      <a  href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
+      <a class="sign-link" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button></a>
     </div>
   </div>
   <div class="container" >
@@ -130,7 +130,7 @@
 
 
     <div class="mb-4 text-center">
-    <a  href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton2 cover-btn btn">SIGN PETITION</button></a>
+    <a class="sign-link" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries" target="_blank"><button type="button" class="myButton2 cover-btn btn">SIGN PETITION</button></a>
   </div>
 
   <div class="row row-content align-items-center">
@@ -148,7 +148,7 @@
 </div>
 
     <div class="mb-4 mt-1 text-center">
-      <a  href="https://www.facebook.com/groups/494996907843289/" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">JOIN FACEBOOK GROUP</button></a>
+      <a class="sign-link" href="https://www.facebook.com/groups/494996907843289/" target="_blank"><button type="button" class="myButton btn-primary cover-btn btn">JOIN FACEBOOK GROUP</button></a>
     </div>
 
 
@@ -180,7 +180,7 @@
   </ul>
 </div>
 <div class="mb-5 text-center">
-  <a  href="#" target="_blank"><button type="button" class="myButton2 cover-btn btn">DONATE NOW!</button></a>
+  <a class="sign-link" href="#" target="_blank"><button type="button" class="myButton2 cover-btn btn">DONATE NOW!</button></a>
 </div>
   </body>
   </html>
