--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       </p>
       
-      <button type="button" class="myButton btn cover-btn btn-primary">SIGN PETITION</button>
+      <button type="button" class="myButton btn-primary cover-btn btn">SIGN PETITION</button>
     </div>
   </div>
    <!--ADDING ABOUT US SECTION-->
@@ -95,7 +95,7 @@
   <div class="col-lg-8">
     <h1 class="first-section-head content">Our Mission</h1>
     <p class="first-section-text content">As Pups In Public Advocacy we are aiming to help dog owners in Florida be allowed to bring their dogs back into breweries with them. We understand that dogs and beer just go together so why force them to be separate? By signing the petition, you and 40+ thousands of other loving dogs owners can join our fight in letting our dogs back into breweries across the state of Florida.</p>
-    <button type="button" class="btn take-action-btn btn-primary"><a class="sign-link" target="_blank" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries">Sign The Petition -></a></button>
+    <a class="sign-link" target="_blank" href="https://www.change.org/p/arron-bean-allow-pets-in-florida-breweries"><button type="button" class="myButton btn-primary cover-btn btn">Sign The Petition -></button></a>
   </div>
 
   <div class="col-lg-2">
